--- a/assets/main.css
+++ b/assets/main.css
@@ -4,9 +4,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+html, body {
+  height: 100%;
+}
 @layer components {
   .fit {
     min-height: calc(100vh - 88px)
+  }
+   .no-scroll {
+    overflow: hidden;
   }
 }
